--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
 							<td class="info-imc">0</td>
 						</tr>
 						<tr class="paciente" >
-							<td class="info-nome">Tatiana</td>
-							<td class="info-peso">46</td>
-							<td class="info-altura">1.55</td>
+							<td class="info-nome">Tais Carla</td>
+							<td class="info-peso">1500000</td>
+							<td class="info-altura">1.00</td>
 							<td class="info-gordura">19</td>
 							<td class="info-imc">0</td>
 						</tr>
